--- a/view/stock_shipment_out_picking_photo.xml
+++ b/view/stock_shipment_out_picking_photo.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part stock_picking_photo module for Tryton.
 The COPYRIGHT file at the top level of this repository contains the full copyright notices and license terms. -->
-<form string="Shipment Out Picking Photo">
+<form>
     <image name="tryton-dialog-information" xexpand="0" xfill="0"/>
     <label string="Add shipment attachments" id="packed"
         yalign="0.0" xalign="0.0" xexpand="1"/>
